<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.user.login.LoginActivity">

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/common_google_signin_btn_icon_light"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:iconSize="25dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLogin" />

    <Button
        android:id="@+id/buttonSigIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:text="@string/login"
        android:textColor="@color/red"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSigIn" />

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>