<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.user.profile.profile.ProfileActivity">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:scaleType="matrix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fond4" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.6"
                android:background="#000000"
                android:backgroundTint="#070606"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/usuario"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/perfil"
                android:textColor="@color/red"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/usuario"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="edad"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonUsuario" />

            <EditText
                android:id="@+id/editTextTextPersonEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/edad"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/telf"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonEdad" />

            <EditText
                android:id="@+id/editTextTextPersonTelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/telf"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="emai"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonTelf" />

            <EditText
                android:id="@+id/editTextTextPersonPais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/face"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPais" />

            <EditText
                android:id="@+id/editTextTextPersonfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/face"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/twit"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonfb" />

            <EditText
                android:id="@+id/editTextTextPersonTwit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/twit"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/textView21"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="insta"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonTwit" />

            <EditText
                android:id="@+id/editTextTextPersonIg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/insta"
                android:textColor="@color/white"
                android:textColorLink="@color/red"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:entries="@array/paises"
                android:minHeight="48dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonIg" />

            <Button
                android:id="@+id/buttonProfileEdit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/outline"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>